Bug 152917 - Regression: ConvertFromUrl() returns an empty string in LibreOffice 7.5.0.1
Summary: Regression: ConvertFromUrl() returns an empty string in LibreOffice 7.5.0.1
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.6.0 target:7.5.0.2
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2023-01-07 18:02 UTC by Roland Baudin
Modified: 2023-01-09 19:09 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Baudin 2023-01-07 18:02:47 UTC
In LibreOffice 7.5.0.1, the ConvertFromUrl() function returns an empty string instead of doing the conversion from URL to path. This breaks the TexMaths extension.

To reproduce, run the following macro:

REM  *****  BASIC  *****

Sub Main

Dim str1 as String
Dim str2 as String

str1 = "file:///home/roland/test.txt"

msgbox str1

str2 =  ConvertFromURL(str1)

msgbox str2

End Sub

In LibreOffice 7.4.2.3, string str2 is equal to "/home/roland/test.txt", as expected.

In LibreOffice 7.5.0.1, string str2 is empty.


LibreOffice 7.4.2.3
====================
Version: 7.4.2.3 / LibreOffice Community
Build ID: 40(Build:3)
CPU threads: 2; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Ubuntu package version: 1:7.4.2~rc3-0ubuntu1
Calc: threaded

LibreOffice 7.5.0.1
===================
Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 2; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded

System
======
Ubuntu 22.10 64 bits (running in A VM, fresh install, fresh LibreOffice profile)
Comment 1 Eike Rathke (retired, only occasionally showing up) 2023-01-07 19:18:55 UTC
Regression from
https://git.libreoffice.org/core/commit/6b3e66cd7a355061bf1dec76bbc4f389b6b60f2d
Comment 2 Commit Notification 2023-01-07 20:29:13 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e06198e1544f33419be4ce303458da8b5160bc1a

Resolves: tdf#152917 Add ConvertFromUrl() put result back, tdf#147132 follow-up

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Roland Baudin 2023-01-07 21:56:24 UTC
Will the fix be included in LibreOffice 7.5.0.2?
Comment 4 Commit Notification 2023-01-07 22:43:26 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/fd5a4de7c39dc43b9668e77046622894cdd2051a

Resolves: tdf#152917 Add ConvertFromUrl() put result back, tdf#147132 follow-up

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Roland Baudin 2023-01-08 16:09:38 UTC
OK nice, I'll test as soon LO 7.5.0.2 is available.
Comment 6 Commit Notification 2023-01-09 19:09:02 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c7cba927bb5d234d6d72f65e063754590a7b584

tdf#152917: basic_macros: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.