Resolves: tdf#152917 Add ConvertFromUrl() put result back, tdf#147132 follow-up

Regression from

    commit 6b3e66cd7a355061bf1dec76bbc4f389b6b60f2d
    CommitDate: Mon Sep 5 16:04:25 2022 +0200

        tdf147132 basic : flaten some functions

Change-Id: I20e6b00ed613b98a5e58623a010d894b1bcb4c6f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145172
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit e06198e1544f33419be4ce303458da8b5160bc1a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145125